k8s/overlays/prod/green/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: cinevision-gateway
spec:
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - DOMAIN_NAME
        - api.DOMAIN_NAME
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - DOMAIN_NAME
        - api.DOMAIN_NAME
      tls:
        mode: SIMPLE
        credentialName: cinevision-tls
