k8s/overlays/prod/green/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: cinevision-green
spec:
  host: api-gateway-green
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
